objects/NFR__c/NFR__c.object-meta.xml
<CustomObject>
    <label>NFR</label>
    <nameField>
        <displayFormat>NFR-{00000}</displayFormat>
        <label>NFR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NFRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>