objects/NFR__c/fields/Agreement_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Effective_Date__c</fullName>
    <description>INC0124516</description>
    <formula>Agreement_Name__r.Agreement_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Effective Date</label>
    <type>Date</type>
</CustomField>