objects/NFR__c/fields/Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_End_Date__c</fullName>
    <description>INC0124516</description>
    <formula>Agreement_Name__r.Apttus__Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>