objects/NFR__c/fields/Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INC0124516</description>
    <inlineHelpText>To be completed by Contracts/Legal team</inlineHelpText>
    <label>Agreement Name</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>NFRs</relationshipLabel>
    <relationshipName>NFRs</relationshipName>
    <type>Lookup</type>
</CustomField>