objects/NFR__c/fields/Agreement_Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signatory_Email__c</fullName>
    <label>Agreement Signatory Email</label>
    <type>Email</type>
</CustomField>