objects/NFR__c/fields/Agreement_Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signatory_Name__c</fullName>
    <label>Agreement Signatory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>