objects/NFR__c/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <description>INC0124516</description>
    <formula>TEXT(Agreement_Name__r.Apttus__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Status</label>
    <type>Text</type>
</CustomField>