objects/NFR__c/fields/Competing_Partners_or_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>Competing_Partners_or_Affiliates__c</fullName>
    <label>Competing Partners or Affiliates</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>