objects/NFR__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Field shows the country the server will be deployed to.</description>
    <formula>Server_Deployment_Links_From_Account__r.Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>