objects/NFR__c/fields/Demo_Rights__c.field-meta.xml
<CustomField>
    <fullName>Demo_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this will be filled out by Channel ops to track if Demo Rights have been granted.</description>
    <inlineHelpText>This will be filled out by Channel ops to track if Demo Rights have been granted.</inlineHelpText>
    <label>Demo Rights</label>
    <type>Checkbox</type>
</CustomField>