objects/NFR__c/fields/Full_HQ_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_HQ_Address__c</fullName>
    <label>Full HQ Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>