objects/NFR__c/fields/Infrastructure_Needed__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Needed__c</fullName>
    <label>Infrastructure Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Prem</fullName>
            </value>
            <value>
                <fullName>Tanium as a Service</fullName>
            </value>
            <value>
                <fullName>Partner Provided</fullName>
                <isActive>false</isActive>
                <label>Partner Provided</label>
            </value>
            <value>
                <fullName>Partner Provided - Physical</fullName>
                <isActive>false</isActive>
                <label>Partner Provided - Physical</label>
            </value>
            <value>
                <fullName>Partner Provided - Virtual</fullName>
                <isActive>false</isActive>
                <label>Partner Provided - Virtual</label>
            </value>
            <value>
                <fullName>Tanium- Cloud</fullName>
                <isActive>false</isActive>
                <label>Tanium- Cloud Appliance</label>
            </value>
            <value>
                <fullName>Tanium- Physical</fullName>
                <isActive>false</isActive>
                <label>Tanium- Physical</label>
            </value>
            <value>
                <fullName>Tanium- Virtual</fullName>
                <isActive>false</isActive>
                <label>Tanium- Virtual Appliance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>