objects/NFR__c/fields/License_Delivered__c.field-meta.xml
<CustomField>
    <fullName>License_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ref: INC0185049
Field only visible to SFDC Admins and Deal Desk profile</description>
    <label>License Delivered</label>
    <type>Checkbox</type>
</CustomField>