objects/NFR__c/fields/License_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Delivery_Status__c</fullName>
    <description>INC0124516</description>
    <label>License Delivery Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>