objects/NFR__c/fields/Licensee_Integration_Details__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Integration_Details__c</fullName>
    <label>Licensee Integration Details?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>