objects/NFR__c/fields/NFR_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NFR_Expiration_Date__c</fullName>
    <label>NFR Expiration Date</label>
    <type>Date</type>
</CustomField>