objects/NFR__c/fields/NFR_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>NFR_Issued_Date__c</fullName>
    <label>NFR Issued Date</label>
    <type>Date</type>
</CustomField>