objects/NFR__c/fields/NFR_License_Purpose__c.field-meta.xml
<CustomField>
    <fullName>NFR_License_Purpose__c</fullName>
    <inlineHelpText>What is the purpose of this request? What is the intended use for the NFR licenses including education, technology and / or integration goals? (Please be specific)&quot;</inlineHelpText>
    <label>NFR License Purpose</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>