objects/NFR__c/fields/NFR_Licensee_Have_Existing_Integration__c.field-meta.xml
<CustomField>
    <fullName>NFR_Licensee_Have_Existing_Integration__c</fullName>
    <label>NFR Licensee Have Existing Integration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>