objects/NFR__c/fields/NFR_Type__c.field-meta.xml
<CustomField>
    <fullName>NFR_Type__c</fullName>
    <label>NFR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Module Addition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>