objects/NFR__c/fields/NFR_Use_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>NFR_Use_Case_Type__c</fullName>
    <label>NFR Use Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration Creation Request</fullName>
            </value>
            <value>
                <fullName>Customer-Facing</fullName>
                <isActive>false</isActive>
                <label>Customer-Facing</label>
            </value>
            <value>
                <fullName>Internal Use Only</fullName>
                <isActive>false</isActive>
                <label>Internal Use Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>