objects/NFR__c/fields/Open_Notes__c.field-meta.xml
<CustomField>
    <fullName>Open_Notes__c</fullName>
    <label>Open Notes</label>
    <type>TextArea</type>
</CustomField>