objects/NFR__c/fields/Partner_Rights_to_Distribute__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rights_to_Distribute__c</fullName>
    <label>Partner Rights to Distribute?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Does not apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>