objects/NFR__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>System Integrator</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>