objects/NFR__c/fields/Partner_Website__c.field-meta.xml
<CustomField>
    <fullName>Partner_Website__c</fullName>
    <label>Partner Website</label>
    <type>Url</type>
</CustomField>