objects/NFR__c/fields/Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Processed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ref: INC0185049
Field only visible to SFDC Admins and Deal Desk profile</description>
    <label>Processed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NFRUser</relationshipName>
    <type>Lookup</type>
</CustomField>