objects/NFR__c/fields/Reference_License_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_License_ID__c</fullName>
    <description>INC0124516</description>
    <label>Reference License ID #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>