objects/NFR__c/fields/Requester_Type__c.field-meta.xml
<CustomField>
    <fullName>Requester_Type__c</fullName>
    <label>Requester Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tanium Technology or Alliance Partner</fullName>
            </value>
            <value>
                <fullName>Tanium Authorized Reseller</fullName>
            </value>
            <value>
                <fullName>Not a current Tanium Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>