objects/NFR__c/fields/Select_Tanium_Product__c.field-meta.xml
<CustomField>
    <fullName>Select_Tanium_Product__c</fullName>
    <label>Select Tanium Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asset</fullName>
                <isActive>false</isActive>
                <label>Asset</label>
            </value>
            <value>
                <fullName>Automate</fullName>
                <isActive>false</isActive>
                <label>Automate</label>
            </value>
            <value>
                <fullName>Certificate Manager</fullName>
            </value>
            <value>
                <fullName>Comply</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Detect</fullName>
                <isActive>false</isActive>
                <label>Detect</label>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Enforce</fullName>
            </value>
            <value>
                <fullName>Enforce macOS Device Enrollment</fullName>
                <isActive>false</isActive>
                <label>Enforce macOS Device Enrollment</label>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Integrity Monitor</fullName>
            </value>
            <value>
                <fullName>Intune</fullName>
            </value>
            <value>
                <fullName>Investigate</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
                <isActive>false</isActive>
                <label>IR</label>
            </value>
            <value>
                <fullName>Jump Gate</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
                <isActive>false</isActive>
                <label>Map</label>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Protect</fullName>
                <isActive>false</isActive>
                <label>Protect</label>
            </value>
            <value>
                <fullName>Provision</fullName>
            </value>
            <value>
                <fullName>Reveal</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>SBOM</fullName>
            </value>
            <value>
                <fullName>Threat Response</fullName>
            </value>
            <value>
                <fullName>Trace</fullName>
                <isActive>false</isActive>
                <label>Trace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>