objects/NFR__c/fields/Server_Deployment_Links_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Server_Deployment_Links_From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INC0124516</description>
    <label>Server Deployment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Server_Deployment__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Server_Deployment__c</referenceTo>
    <relationshipLabel>Server Deployments</relationshipLabel>
    <relationshipName>NFRServDep</relationshipName>
    <type>Lookup</type>
</CustomField>