objects/NFR__c/fields/Server_Name_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Server_Name_IP_Address__c</fullName>
    <description>2012-12-04 Case 60165 Changed label to &quot;Server Name, IP Address&quot;</description>
    <label>Server Name, IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>