objects/NFR__c/fields/ServerCountry__c.field-meta.xml
<CustomField>
    <fullName>ServerCountry__c</fullName>
    <description>TAN-1008</description>
    <label>Server Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HQ_Country</valueSetName>
    </valueSet>
</CustomField>