objects/NFR__c/fields/Support_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Support_Requirements__c</fullName>
    <inlineHelpText>What kind of support resources (TAM) will the partner require (Installation, deployment, initial training, other)? - Please document the support model agreed to by both the regional Sales and TAM/POD Teams.</inlineHelpText>
    <label>Support Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>