objects/NFR__c/fields/TAM_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>TAM_Contact_Name__c</fullName>
    <label>Tanium Contact Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>