objects/NFR__c/fields/Tanium_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Sales_Contact__c</fullName>
    <description>INC0124516</description>
    <formula>Account__r.Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Owner&apos;s Name</inlineHelpText>
    <label>Tanium Sales Contact</label>
    <type>Text</type>
</CustomField>