objects/NFR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Partner_Legal_Name__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>Requestor_Name__c</columns>
    <columns>NFR_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>