objects/NFR__c/listViews/Channel_Ops_NFR.listView-meta.xml
<ListView>
    <fullName>Channel_Ops_NFR</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Channel Ops</label>
    <queue>Channel_Ops</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>