objects/NFR__c/listViews/Legal_Queue_NFR.listView-meta.xml
<ListView>
    <fullName>Legal_Queue_NFR</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal Queue</label>
    <queue>Legal_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>