objects/NFR__c/listViews/Order_Ops_NFR.listView-meta.xml
<ListView>
    <fullName>Order_Ops_NFR</fullName>
    <filterScope>Queue</filterScope>
    <label>Order Ops</label>
    <queue>Order_Ops</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>