objects/NFR__c/listViews/Provision_PM_Approval_NFR_NFR.listView-meta.xml
<ListView>
    <fullName>Provision_PM_Approval_NFR_NFR</fullName>
    <filterScope>Queue</filterScope>
    <label>Provision PM Approval</label>
    <queue>Provision_PM_Approval_NFR</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>